syntax = "proto3";

package user;

option go_package = "proto/pb";
import "common.proto";


service UserService {
  rpc CreateUser(CreateUserRequest) returns(common.AbsResponse);
  rpc GetTeachers(GetTeachersRequest)returns(GetTeachersResponse);
}

message CreateUserRequest{
  string fullName = 1;
  string phoneNumber = 2;
  string password = 3;
  string role = 4;
  string birthDate = 5;
  bool gender = 6;
}

message GetTeachersRequest{
  bool isDeleted = 1;
}

message GetTeachersResponse{
  string id = 4;
  string fullName = 1;
  string phoneNumber = 2;
  string activeGroups = 3;
}